--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@icedesign/container": "^0.1.2",
     "@icedesign/data-binder": "^0.1.1",
     "@icedesign/form-binder": "^0.1.4",
+    "@icedesign/icon": "^0.1.1",
     "@icedesign/img": "^0.1.1",
     "@icedesign/label": "^0.1.2",
     "@icedesign/layout": "^0.1.1",
